<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:mls="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_bg">

    <include
            layout="@layout/action_bar_mls_layout">

    </include>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_activity_main_margin_vertical"
            android:layout_marginBottom="@dimen/layout_activity_main_margin_vertical"
            android:layout_marginLeft="@dimen/layout_activity_main_margin_horizontal"
            android:layout_marginRight="@dimen/layout_activity_main_margin_horizontal">

        <io.tmtools.services.mls.widgets.MLSTextView
                    android:layout_width="@dimen/label_activity_mls_tools_width"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:background="@drawable/selector_action_main"
                    android:layout_gravity="center"
                    android:gravity="center"
                    mls:text="@string/action_activity_mls_title"
                    android:textStyle="bold"
                    android:textSize="@dimen/label_activity_main_text_size"
                    android:textColor="@color/selector_label_start_explorer"/>

        <io.tmtools.services.mls.widgets.MLSTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                mls:text="@string/label_activity_mls_the_mobile_tools"
                android:textSize="@dimen/label_activity_main_the_mobile_tools__text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/image_activity_main_margin_top"
                android:gravity="center"
                android:textColor="@color/label_the_mobile_tools"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/image_activity_main_margin_top"
            android:gravity="top">

            <io.tmtools.services.mls.widgets.MLSTextView
                    android:layout_width="@dimen/label_activity_mls_tools_width"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:layout_marginTop="@dimen/label_activity_mls_tools_margin_top"
                    android:layout_gravity="center"
                    android:gravity="center"
                    mls:text="@string/label_activity_mls_tools"
                    android:textSize="@dimen/label_activity_main_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/selector_label_start_explorer"
                    android:background="@drawable/action_main_bg"/>

            <io.tmtools.services.mls.widgets.MLSEditText
                    android:layout_width="@dimen/label_activity_mls_tools_width"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/label_activity_mls_tools_margin_top"
                    android:gravity="center"
                    mls:hint="@string/input_activity_mls_tools"
                    android:textSize="@dimen/label_activity_main_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:background="@drawable/action_main_selected_bg"/>


            <io.tmtools.services.mls.widgets.MLSButton
                    android:layout_width="@dimen/label_activity_mls_tools_width"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/label_activity_mls_tools_margin_top"
                    android:gravity="center"
                    mls:text="@string/action_activity_mls_tools"
                    android:textSize="@dimen/label_activity_main_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/selector_label_start_explorer"
                    android:background="@drawable/selector_action_main"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>