<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_bg">

    <include
            layout="@layout/action_bar_crashes">
    </include>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_activity_main_margin_vertical"
            android:layout_marginBottom="@dimen/layout_activity_main_margin_vertical"
            android:layout_marginLeft="@dimen/layout_activity_main_margin_horizontal"
            android:layout_marginRight="@dimen/layout_activity_main_margin_horizontal">

        <TextView
                android:layout_width="@dimen/label_activity_mls_tools_width"
                android:layout_height="@dimen/action_activity_main_height"
                android:background="@drawable/selector_action_main"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/action_activity_main_crashes"
                android:textStyle="bold"
                android:textSize="@dimen/label_activity_main_text_size"
                android:textColor="@color/selector_label_start_explorer"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_activity_main_the_mobile_tools"
                android:textSize="@dimen/label_activity_main_the_mobile_tools__text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/image_activity_main_margin_top"
                android:gravity="center"
                android:textColor="@color/label_the_mobile_tools"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="@dimen/image_activity_main_margin_top">

            <TextView
                    android:id="@+id/label_activity_crashes_tools_first"
                    android:layout_width="@dimen/label_activity_mls_tools_width"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:text="@string/action_activity_crashes_null"
                    android:textSize="@dimen/label_activity_main_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/selector_label_start_explorer"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/selector_action_main"
                    android:layout_marginTop="@dimen/label_activity_crashes_tools_margin_top"/>

            <TextView
                    android:id="@+id/label_activity_crashes_tools_second"
                    android:layout_width="@dimen/label_activity_mls_tools_width"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:text="@string/action_activity_crashes_oom"
                    android:textSize="@dimen/label_activity_main_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/selector_label_start_explorer"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/selector_action_main"
                    android:layout_marginTop="@dimen/label_activity_crashes_tools_margin_top"/>

            <TextView
                    android:id="@+id/label_activity_crashes_tools_third"
                    android:layout_width="@dimen/label_activity_mls_tools_width"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:text="@string/action_activity_crashes_thread"
                    android:textSize="@dimen/label_activity_main_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/selector_label_start_explorer"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/selector_action_main"
                    android:layout_marginTop="@dimen/label_activity_crashes_tools_margin_top"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>