<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="@dimen/layout_activity_main_margin_vertical"
              android:paddingBottom="@dimen/layout_activity_main_margin_vertical"
              android:paddingLeft="@dimen/layout_activity_main_margin_horizontal"
              android:paddingRight="@dimen/layout_activity_main_margin_horizontal"
              android:background="@drawable/main_bg">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_activity_main_the_mobile_tools"
            android:textSize="@dimen/label_activity_main_the_mobile_tools__text_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/image_activity_main_margin_top"
            android:gravity="center"
            android:textColor="@color/label_the_mobile_tools"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/action_activity_main_margin_margin_horizontal"
                android:gravity="center"
                android:layout_gravity="center">

            <Button
                    android:id="@+id/action_activity_main_crashes"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:text="@string/action_activity_main_crashes"
                    android:textStyle="bold"
                    android:background="@drawable/selector_action_main"
                    android:textColor="@color/selector_label_start_explorer"
                    android:textSize="@dimen/label_activity_main_text_size"/>

            <Button
                    android:id="@+id/action_activity_main_mls"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/action_activity_main_height"
                    android:text="@string/action_activity_main_mls"
                    android:textStyle="bold"
                    android:background="@drawable/selector_action_main"
                    android:layout_marginTop="@dimen/action_activity_main_margin_margin_horizontal"
                    android:layout_marginBottom="@dimen/action_activity_main_margin_margin_horizontal"
                    android:textColor="@color/selector_label_start_explorer"
                    android:textSize="@dimen/label_activity_main_text_size"/>

        </LinearLayout>
</LinearLayout>